--- a/angular.client/src/app/modules/admin/reports/classroom-report/classroom-report.component.html
+++ b/angular.client/src/app/modules/admin/reports/classroom-report/classroom-report.component.html
@@ -139,17 +139,18 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
                             <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
                         </ng-container>
-                            <!-- DNI Column -->
-                            <ng-container matColumnDef="DNI">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>DNI</th>
-                                <td mat-cell *matCellDef="let element"> {{element.DNI}} </td>
-                            </ng-container>
+                        <!-- DNI Column -->
+                        <ng-container matColumnDef="DNI">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>DNI</th>
+                            <td mat-cell *matCellDef="let element"> {{element.DNI}} </td>
+                        </ng-container>
 
                         <!-- Estado Evaluacion Estudiante Column -->
                         <ng-container matColumnDef="estadoEvaluacionEstudiante">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado Evaluacion</th>
                             <td mat-cell *matCellDef="let element">
-                                <span class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
+                                <span
+                                    class="inline-flex items-center font-bold text-xs px-2.5 py-0.5 rounded-full tracking-wide uppercase"
                                     [ngClass]="{
                                         'bg-orange-200 text-orange-800 dark:bg-orange-600 dark:text-orange-50': element.estadoEvaluacionEstudiante === 'P',
                                         'bg-gray-200 text-gray-800 dark:bg-gray-600 dark:text-gray-50': element.estadoEvaluacionEstudiante === 'N',
@@ -172,8 +173,8 @@
                         <ng-container matColumnDef="opciones">
                             <th mat-header-cell *matHeaderCellDef>Opciones</th>
                             <td mat-cell *matCellDef="let element">
-                                <button [disabled]="element.mean == 0" mat-icon-button
-                                    (click)="redirectStudent(element.id)">
+                                <button [disabled]="element.mean == 0 || element.estadoEvaluacionEstudiante !='F'"
+                                    mat-icon-button (click)="redirectStudent(element.id)">
                                     <mat-icon>visibility</mat-icon>
                                 </button>
                             </td>
