--- a/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/classrooms.component.html
@@ -29,7 +29,6 @@
             </div>
         </div>
     </div>
-
     <div class="flex flex-col flex-auto min-w-0">
         <!-- Main -->
         <div class="flex-auto px-6 py-4 sm:px-10 sm:py-7">
@@ -168,9 +167,10 @@
                                             </th>
                                             <td mat-cell *matCellDef="let student">
                                                 {{
-                                                formatName(
-                                                student.nombreCompleto
-                                                )
+                                                (student.apellidoPaterno.toLowerCase() + ' '+
+                                                student.apellidoMaterno.toLowerCase() + ', ' +
+                                                student.nombres.toLowerCase()) | titlecase
+
                                                 }}
                                             </td>
                                         </ng-container>
@@ -229,7 +229,7 @@
                                             </th>
                                             <td mat-cell *matCellDef="let student">
                                                 <ng-container *ngIf="modificarAula; else noOptions">
-                                                    <button (click)="formEditStudent(student)">
+                                                    <button (click)="editarEstudianteComponente(student)">
                                                         <mat-icon>edit</mat-icon>
                                                     </button>
                                                     <button (click)="deleteStudent(student.estudianteId)">
@@ -427,103 +427,9 @@
                         </div>
                         <!-- #endregion-->
                         } @case("edit"){
-                        <!-- #region Editar estudiante -->
-                        <div
-                            class="sm:col-span-6 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
-                            <div class="text-lg font-medium tracking-tight leading-6 truncate">
-                                Editar estudiante
-                            </div>
-                            <div class="flex flex-col flex-auto mt-2">
-                                <div class="flex-auto py-1 sm:py-3">
-                                    <div class="flex flex-col gap-4">
-                                        <div class="flex flex-col items-start">
-                                            <div class="w-full">
-                                                <form [formGroup]="
-                                                        formEditarEstudiante
-                                                    " (ngSubmit)="
-                                                        editEstudiante()
-                                                    " class="flex flex-col p-2">
-                                                    <mat-form-field class="flex-auto mb-2">
-                                                        <mat-label>Nombres</mat-label>
-                                                        <input type="text" matInput formControlName="nombres"
-                                                            placeholder="Ingrese su nombre" />
-                                                        <mat-error *ngIf="
-                                                                formEditarEstudiante.get(
-                                                                    'nombres'
-                                                                ).invalid &&
-                                                                formEditarEstudiante.get(
-                                                                    'nombres'
-                                                                ).touched
-                                                            ">
-                                                            Falta ingresar
-                                                            nombre
-                                                        </mat-error>
-                                                    </mat-form-field>
-                                                    <mat-form-field class="flex-auto mb-2">
-                                                        <mat-label>Apellido
-                                                            Paterno</mat-label>
-                                                        <input type="text" matInput formControlName="apellidoPaterno"
-                                                            required placeholder="Ingrese su apellido paterno" />
-                                                        <mat-error *ngIf="
-                                                                formEditarEstudiante.get(
-                                                                    'apellidoPaterno'
-                                                                ).invalid &&
-                                                                formEditarEstudiante.get(
-                                                                    'apellidoPaterno'
-                                                                ).touched
-                                                            ">
-                                                            Falta ingresar
-                                                            apellido paterno
-                                                        </mat-error>
-                                                    </mat-form-field>
-                                                    <mat-form-field class="flex-auto mb-2">
-                                                        <mat-label>Apellido
-                                                            Materno</mat-label>
-                                                        <input type="text" matInput formControlName="apellidoMaterno"
-                                                            placeholder="Ingrese su apellido materno" />
-                                                        <mat-error *ngIf="
-                                                                formEditarEstudiante.get(
-                                                                    'apellidoMaterno'
-                                                                ).invalid &&
-                                                                formEditarEstudiante.get(
-                                                                    'apellidoMaterno'
-                                                                ).touched
-                                                            ">
-                                                            Falta ingresar
-                                                            apellido materno
-                                                        </mat-error>
-                                                    </mat-form-field>
-                                                    <mat-form-field class="flex-auto mb-2">
-                                                        <mat-label>DNI</mat-label>
-                                                        <input type="number" matInput formControlName="dni"
-                                                            placeholder="Ingrese su DNI" />
-                                                        @if(
-                                                        formEditarEstudiante.get('dni'
-                                                        ).invalid &&
-                                                        formEditarEstudiante.get(
-                                                        'dni' ).touched){
-                                                        <mat-error>
-                                                            El DNI tiene que
-                                                            tener 8 dígitos
-                                                        </mat-error>
-                                                        }
-                                                    </mat-form-field>
-                                                    <div class="flex justify-end mt-4">
-                                                        <button type="submit" mat-raised-button color="primary"
-                                                            [disabled]="
-                                                                formEditarEstudiante.invalid
-                                                            ">
-                                                            Editar
-                                                        </button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- #endregion-->
+                        <app-editar-estudiante #editarEstudiante [formEditarEstudiante]="formEditarEstudiante"
+                            (editarEstudianteSuccessful)="onEditarEstudianteSuccessful($event)">
+                            ></app-editar-estudiante>
                         }}
                     </div>
                 </div>
