--- a/angular.client/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/angular.client/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -33,12 +33,12 @@
             <div class="flex items-center mx-2 lg:mr-8">
                 <div class="hidden lg:flex">
                     <img class="dark:hidden w-20 max-w-full max-h-20 h-auto scale-75"
-                        src="assets/images/logo/logo-app.png">
+                        src="assets/images/logo/logo-app.webp">
                     <img class="hidden dark:flex w-20 max-w-full max-h-20 h-auto scale-75"
-                        src="assets/images/logo/logo-app.png">
+                        src="assets/images/logo/logo-app.webp">
                 </div>
                 <img class="flex lg:hidden w-6 max-w-full max-h-6 h-auto scale-75"
-                    src="assets/images/logo/logo-app.png">
+                    src="assets/images/logo/logo-app.webp">
             </div>
             <!-- Horizontal navigation -->
             <fuse-horizontal-navigation class="mr-2" [name]="'mainNavigation'"
