--- a/angular.client/src/app/modules/admin/classrooms/editar-estudiante/editar-estudiante.component.html
+++ b/angular.client/src/app/modules/admin/classrooms/editar-estudiante/editar-estudiante.component.html
@@ -1,10 +1,11 @@
 <div class="sm:col-span-6 flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
-    <div class="text-lg font-medium tracking-tight leading-6 truncate">
+    <div class="text-lg font-medium tracking-tight leading-6
+    truncate">
         Editar estudiante
     </div>
     <div class="flex flex-col flex-auto mt-2">
         <div class="flex-auto py-1 sm:py-3">
-            <div class="flex flex-col gap-4">
+            <div class="flex flex-col gap-4">  
                 <div class="flex flex-col items-start">
                     <div class="w-full">
                         <form [formGroup]="this.formEditarEstudiante" (ngSubmit)="editEstudiante()" class="flex flex-col p-2">
